przygotowanie planszy + dana karta ma swoj wlasny id

--- a/src/Components/Board.css
+++ b/src/Components/Board.css
@@ -1,5 +1,16 @@
 .mainContainer .board {
   width: 800px;
-  height: 400px;
+  height: 600px;
   background-color: lightblue;
   margin: 100px auto; }
+  .mainContainer .board .row {
+    display: flex;
+    flex-direction: row; }
+    .mainContainer .board .row .card {
+      width: 70px;
+      height: 100px;
+      line-height: 100px;
+      text-align: center;
+      background-color: deepskyblue;
+      margin: 10px 40px;
+      border-radius: 15px; }
