--- a/src/Components/Board.css
+++ b/src/Components/Board.css
@@ -6,11 +6,35 @@
   .mainContainer .board .row {
     display: flex;
     flex-direction: row; }
-    .mainContainer .board .row .card {
+    .mainContainer .board .row .cardContainer {
+      position: relative;
       width: 70px;
       height: 100px;
-      line-height: 100px;
-      text-align: center;
-      background-color: deepskyblue;
-      margin: 10px 40px;
-      border-radius: 15px; }
+      margin: 20px; }
+      .mainContainer .board .row .cardContainer .flipIt {
+        transform: rotateY(180deg); }
+      .mainContainer .board .row .cardContainer .card {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transform-style: preserve-3d;
+        transition: all 0.5s ease; }
+        .mainContainer .board .row .cardContainer .card .frontCard {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          backface-visibility: hidden;
+          background-color: red;
+          color: black;
+          line-height: 100px;
+          text-align: center; }
+        .mainContainer .board .row .cardContainer .card .backCard {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          backface-visibility: hidden;
+          background-color: blue;
+          color: black;
+          line-height: 100px;
+          text-align: center;
+          transform: rotateY(180deg); }
