--- a/src/Components/Board.scss
+++ b/src/Components/Board.scss
@@ -1,21 +1,50 @@
-.mainContainer{
-  .board{
+.mainContainer {
+  .board {
     width: 800px;
     height: 600px;
     background-color: lightblue;
     margin: 100px auto;
-    .row{
+    .row {
       display: flex;
       flex-direction: row;
-      .card{
-        width: 70px;
-        height: 100px;
-        line-height: 100px;
-        text-align: center;
-        background-color: deepskyblue;
-        margin: 10px 40px;
-        border-radius: 15px;
+        .cardContainer {
+          position: relative;
+          width: 70px;
+          height: 100px;
+          margin: 20px;
+          .flipIt{
+            transform: rotateY(180deg);
+          }
+          .card {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            transform-style: preserve-3d;
+            transition: all 0.5s ease;
+
+            .frontCard {
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              backface-visibility: hidden;
+              background-color: red;
+              color: black;
+              line-height: 100px;
+              text-align: center;
+            }
+            .backCard {
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              backface-visibility: hidden;
+              background-color: blue;
+              color: black;
+              line-height: 100px;
+              text-align: center;
+              transform: rotateY(180deg);
+            }
+          }
+        }
       }
     }
   }
-}
