--- a/src/Components/Board.css
+++ b/src/Components/Board.css
@@ -3,6 +3,9 @@
   height: 600px;
   background-color: lightblue;
   margin: 100px auto; }
+  .mainContainer .board .levelSelection .level {
+    margin: 20px;
+    display: inline-block; }
   .mainContainer .board .row {
     display: flex;
     flex-direction: row; }
@@ -30,6 +33,9 @@
           text-align: center; }
         .mainContainer .board .row .cardContainer .card .backCard {
           position: absolute;
+          display: flex;
+          justify-content: center;
+          align-items: center;
           width: 100%;
           height: 100%;
           backface-visibility: hidden;
@@ -38,3 +44,7 @@
           line-height: 100px;
           text-align: center;
           transform: rotateY(180deg); }
+          .mainContainer .board .row .cardContainer .card .backCard .logo1 {
+            background-color: yellow;
+            width: 50px;
+            height: 50px; }
