--- a/src/Components/Board.scss
+++ b/src/Components/Board.scss
@@ -4,6 +4,12 @@
     height: 600px;
     background-color: lightblue;
     margin: 100px auto;
+    .levelSelection {
+      .level {
+        margin: 20px;
+        display: inline-block;
+      }
+    }
     .row {
       display: flex;
       flex-direction: row;
@@ -34,6 +40,9 @@
             }
             .backCard {
               position: absolute;
+              display: flex;
+              justify-content: center;
+              align-items: center;
               width: 100%;
               height: 100%;
               backface-visibility: hidden;
@@ -42,6 +51,11 @@
               line-height: 100px;
               text-align: center;
               transform: rotateY(180deg);
+              .logo1{
+                background-color: yellow;
+                width: 50px;
+                height: 50px;
+              }
             }
           }
         }
