--- a/src/Components/Board.scss
+++ b/src/Components/Board.scss
@@ -2,31 +2,86 @@
   background-image: url($url);
   background-size: cover;
   background-position: center;
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
 }
 
 .mainContainer {
+  width: 100%;
+  height: 100vh;
+  background-image: radial-gradient(circle, #b87c4c, #9d6346, #7f4c3e, #603934, #412728);
   .board {
-    width: 800px;
-    height: 600px;
-    background-color: lightblue;
-    margin: 100px auto;
+    width: 1200px;
+    height: 1100px;
+    margin: 0 auto 80px 10%;
+    padding-top: 100px;
     .levelSelection {
+      width: 80%;
+      margin: 0 auto 50px auto;
+      display: flex;
+      justify-content: space-between;
       .level {
+        font-size: 180%;
         margin: 20px;
-        display: inline-block;
+        list-style: none;
+        color: #FFDE00;
+        border-bottom: 2px solid #FFCB0A ;
+        letter-spacing: 2px;
+        cursor: pointer;
+        &:hover{
+          color: #fff;
+          border-bottom: 2px solid #fff;
+        }
       }
     }
-    .row {
-      display: flex;
-      flex-direction: row;
+    .containerBoard {
+      width: 90%;
+      margin: 0 auto;
+      .result {
+        display: flex;
+        .guessed{
+          font-size: 200%;
+          letter-spacing: 1px;
+          color: #fff;
+          margin: 2px 0 0 100px;
+          transition: 1s;
+        }
+        .reset {
+          width: 300px;
+          height: 40px;
+          line-height: 40px;
+          font-size: 130%;
+          text-align: center;
+          border-radius: 20px;
+          border: 2px solid #FFDE00;
+          color: #FFDE00;
+          letter-spacing: 1px;
+          background: none;
+          outline: none;
+          cursor: pointer;
+          &:hover {
+            color: #fff;
+            border: 2px solid #fff;
+          }
+        }
+      }
+      .row {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
         .cardContainer {
           position: relative;
-          width: 70px;
-          height: 100px;
+          width: 15%;
+          height: 180px;
           margin: 20px;
-          .flipIt{
+          &:nth-of-type(1){
+            margin-left: 0;
+          }
+          &:nth-of-type(6){
+            margin-right: 0;
+          }
+          .flipIt {
             transform: rotateY(180deg);
           }
           .card {
@@ -35,16 +90,14 @@
             height: 100%;
             transform-style: preserve-3d;
             transition: all 0.5s ease;
-
             .frontCard {
               position: absolute;
               width: 100%;
               height: 100%;
               backface-visibility: hidden;
-              background-color: red;
-              color: black;
-              line-height: 100px;
+              background-image: linear-gradient(to right, #dbba00, #e4c100, #edc900, #f6d000, #ffd800);
               text-align: center;
+              border-radius: 30px;
             }
             .backCard {
               position: absolute;
@@ -54,45 +107,45 @@
               width: 100%;
               height: 100%;
               backface-visibility: hidden;
-              background-color: blue;
-              color: black;
-              line-height: 100px;
+              background: none;
+              border: 2px solid #dbba00;
+              border-radius: 30px;
               text-align: center;
               transform: rotateY(180deg);
-              .logo0{
+              .logo0 {
                 @include card('../logo-memoryCard/python.jpg')
               }
-              .logo1{
+              .logo1 {
                 @include card('../logo-memoryCard/angular.jpg')
               }
-              .logo2{
+              .logo2 {
                 @include card('../logo-memoryCard/c.jpg')
               }
-              .logo3{
-                @include card('../logo-memoryCard/java.jpg')
+              .logo3 {
+                @include card('../logo-memoryCard/swift.jpg')
               }
-              .logo4{
-                @include card('../logo-memoryCard/node.jpg')
+              .logo4 {
+                @include card('../logo-memoryCard/redux.jpg')
               }
-              .logo5{
+              .logo5 {
                 @include card('../logo-memoryCard/ruby.jpg')
               }
-              .logo6{
+              .logo6 {
                 @include card('../logo-memoryCard/css.jpg')
               }
-              .logo7{
+              .logo7 {
                 @include card('../logo-memoryCard/html5.jpg')
               }
-              .logo8{
+              .logo8 {
                 @include card('../logo-memoryCard/js.jpg')
               }
-              .logo9{
-                @include card('../logo-memoryCard/mySQL.jpg')
+              .logo9 {
+                @include card('../logo-memoryCard/cc.jpg')
               }
-              .logo10{
+              .logo10 {
                 @include card('../logo-memoryCard/vue.jpg')
               }
-              .logo11{
+              .logo11 {
                 @include card('../logo-memoryCard/react.jpg')
               }
 
@@ -102,3 +155,4 @@
       }
     }
   }
+}
