--- a/src/Components/Board.css
+++ b/src/Components/Board.css
@@ -6,10 +6,10 @@
     display: flex;
     flex-direction: row;
     margin: 0 auto 80px 10%;
-    padding-top: 100px; }
+    padding-top: 40px; }
     .mainContainer .container .board {
-      width: 1200px;
-      height: 1100px; }
+      width: 1000px;
+      height: 100%; }
       .mainContainer .container .board .levelSelection {
         width: 80%;
         margin: 0 auto 50px auto;
