--- a/src/Components/Board.scss
+++ b/src/Components/Board.scss
@@ -8,10 +8,10 @@
     display: flex;
     flex-direction: row;
     margin: 0 auto 80px 10%;
-    padding-top: 100px;
+    padding-top: 40px;
     .board {
-      width: 1200px;
-      height: 1100px;
+      width: 1000px;
+      height: 100%;
       .levelSelection {
         width: 80%;
         margin: 0 auto 50px auto;
