--- a/src/Components/Board.css
+++ b/src/Components/Board.css
@@ -3,12 +3,13 @@
   height: 100vh;
   background-image: radial-gradient(circle, #b87c4c, #9d6346, #7f4c3e, #603934, #412728); }
   .mainContainer .container {
+    width: 1000px;
     display: flex;
     flex-direction: row;
-    margin: 0 auto 80px 10%;
+    margin: 0 auto 80px auto;
     padding-top: 40px; }
     .mainContainer .container .board {
-      width: 1000px;
+      width: 100%;
       height: 100%; }
       .mainContainer .container .board .levelSelection {
         width: 80%;
