--- a/src/Components/Clock.scss
+++ b/src/Components/Clock.scss
@@ -1,22 +1,26 @@
-.clock{
-  width: 260px;
+.clock {
+  width: 360px;
   height: 500px;
   margin-top: 100px;
   display: flex;
-  .timerStart{
-    border: none;
-    height: 35px;
-    font-size: 180%;
-    background: none;
+  flex-direction: column;
+  font-size: 150%;
+  color: #FFDE00;
+  .startTimer{
+    text-align: center;
+    border: 3px dotted #fff;
     cursor: pointer;
-    color: #FFDE00;
     margin: 10px 0;
-    outline: none;
   }
   .timer{
-    padding-top: 8px;
-    padding-left: 6px;
-    color: #FFDE00;
-    font-size: 200%;
+  span{
+    padding-left: 25px;
+    }
+  }
+  .timeGuessed{
+    margin: 10px 0;
+    span{
+      padding-left: 9px;
+    }
   }
 }
