--- a/src/Components/Clock.scss
+++ b/src/Components/Clock.scss
@@ -1,5 +1,5 @@
 .clock {
-  width: 360px;
+  width: 500px;
   height: 500px;
   margin-top: 100px;
   display: flex;
@@ -7,10 +7,11 @@
   font-size: 150%;
   color: #FFDE00;
   .startTimer{
+    width: 80%;
     text-align: center;
     border: 3px dotted #fff;
     cursor: pointer;
-    margin: 10px 0;
+    margin: 10px 10%;
   }
   .timer{
   span{
@@ -21,6 +22,13 @@
     margin: 10px 0;
     span{
       padding-left: 9px;
+    }
+  }
+  .currentUser{
+    width: 100%;
+    margin: 0 0 10px 0;
+    span{
+      padding-left: 25px;
     }
   }
 }
