--- a/src/Components/GameStyle.scss
+++ b/src/Components/GameStyle.scss
@@ -19,6 +19,7 @@
     width: 300px;
     height: 100px;
     z-index: 11;
+    top: 300px;
     .popUpText{
       width: 80%;
       text-align: center;
