--- a/src/Components/GameStyle.css
+++ b/src/Components/GameStyle.css
@@ -17,7 +17,8 @@
     border-radius: 20px;
     width: 300px;
     height: 100px;
-    z-index: 11; }
+    z-index: 11;
+    top: 300px; }
     .gameContainer .box .popUpText {
       width: 80%;
       text-align: center;
