--- a/src/Components/Board.scss
+++ b/src/Components/Board.scss
@@ -1,78 +1,73 @@
+@-webkit-keyframes shine {
+  from {
+    -webkit-mask-position: 150%;
+  }
 
+  to {
+    -webkit-mask-position: -50%;
+  }
+}
 
 .mainContainer {
   width: 100%;
-  height: 100vh;
-  background-image: radial-gradient(circle, #b87c4c, #9d6346, #7f4c3e, #603934, #412728);
   .container {
-    width: 1100px;
+    width: 90%;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
-    margin: 0 50px 80px 50px;
-    padding-top: 40px;
     .board {
       width: 100%;
       height: 100%;
       .levelSelection {
-        width: 80%;
-        margin: 0 auto 50px auto;
+        width: 100%;
+        margin: 20px 0;
         display: flex;
         justify-content: space-between;
         .level {
-          font-size: 180%;
-          margin: 20px;
+          width: 30%;
+          font-size: 1.4rem;
           list-style: none;
-          color: #FFDE00;
-          border-bottom: 2px solid #FFCB0A;
+          color: #FFF;
           letter-spacing: 2px;
-          transition: 0.5s;
           cursor: pointer;
           &:hover {
-            color: #fff;
-            border-bottom: 2px solid #fff;
+              -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
+              -webkit-mask-size: 200%;
+              animation: shine 3s infinite;
+            }
           }
         }
       }
       .containerBoard {
-        width: 90%;
-        margin: 0 auto;
+        width: 100%;
         .result {
           display: flex;
-          .guessed {
-            font-size: 200%;
+          justify-content: center;
+          .reset {
+            text-align: center;
             letter-spacing: 1px;
             color: #fff;
-            margin: 2px 0 0 10px;
-            transition: 1s;
-          }
-          .reset {
-            width: 300px;
-            height: 40px;
-            line-height: 40px;
-            font-size: 130%;
-            text-align: center;
-            border-radius: 20px;
-            border: 2px solid #FFDE00;
-            color: #FFDE00;
+            padding: 4px 10px;
+            border-radius: 10px;
             letter-spacing: 1px;
+            border: 2px solid #fff;
             background: none;
             outline: none;
             cursor: pointer;
-            transition: 0.2s;
             &:hover {
-              color: #fff;
-              border: 2px solid #fff;
+              -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,0.5) 30%, #000 50%, rgba(0,0,0,0.5) 70%);
+              -webkit-mask-size: 200%;
+              animation: shine 3s infinite;
             }
           }
         }
         .row {
           width: 100%;
+          height: 80px;
           display: flex;
           justify-content: space-between;
           flex-direction: row;
-
         }
       }
     }
   }
-}
