--- a/src/Components/GameStyle.css
+++ b/src/Components/GameStyle.css
@@ -1,11 +1,14 @@
 .gameContainer {
-  overflow: auto; }
+  overflow: auto;
+  color: #fff;
+  letter-spacing: 1px;
+  background: #04005C; }
   .gameContainer .disableAll {
     display: block;
     width: 100%;
     height: 100%;
     background-color: #fff;
-    opacity: 0.8;
+    opacity: 0.9;
     position: fixed;
     top: 0;
     left: 0;
@@ -13,15 +16,42 @@
   .gameContainer .box {
     display: block;
     position: fixed;
-    background-color: lightgoldenrodyellow;
+    background-color: #3176FF;
     border-radius: 20px;
     width: 300px;
-    height: 100px;
+    height: 150px;
     z-index: 11;
-    top: 300px; }
+    top: 300px;
+    left: calc(50% - 150px); }
     .gameContainer .box .popUpText {
+      margin: 10px 10% 0 10%;
       width: 80%;
+      line-height: 0.9rem;
+      letter-spacing: 1px;
       text-align: center;
-      display: block; }
-    .gameContainer .box .inputName {
-      margin: 20px 0 0 20px; }
+      display: block;
+      font-size: 0.8rem; }
+    .gameContainer .box .popUpName {
+      margin-top: 16px;
+      width: 100%;
+      text-align: center;
+      display: block;
+      font-size: 1.4rem; }
+    .gameContainer .box .formUserName {
+      width: 100%;
+      margin: 14px 0 0 35px; }
+      .gameContainer .box .formUserName .inputName {
+        border: none;
+        height: 25px;
+        padding-left: 5px;
+        border-bottom-left-radius: 5px;
+        border-top-left-radius: 5px; }
+      .gameContainer .box .formUserName .sendUserName {
+        height: 27px;
+        width: 60px;
+        border: none;
+        border-bottom-right-radius: 5px;
+        border-top-right-radius: 5px; }
+        .gameContainer .box .formUserName .sendUserName:hover {
+          color: #fff;
+          background-color: #555; }
