--- a/src/Components/Board.css
+++ b/src/Components/Board.css
@@ -48,5 +48,31 @@
         flex-direction: row; }
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
+  .mainContainer .container .board .levelSelection .level {
+    font-size: 170%; }
   .mainContainer .container .containerBoard .row {
     height: 120px; } }
+
+@media only screen and (min-width: 767px) and (max-width: 1024px) {
+  .mainContainer .container .board .levelSelection .level {
+    font-size: 190%; }
+  .mainContainer .container .containerBoard .row {
+    height: 170px; } }
+
+@media only screen and (min-width: 1025px) {
+  .mainContainer .container {
+    width: 1024px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
+    .mainContainer .container .board {
+      width: 68%; }
+      .mainContainer .container .board .levelSelection {
+        margin: 30px 0; }
+        .mainContainer .container .board .levelSelection .level {
+          font-size: 180%; }
+    .mainContainer .container .clock {
+      width: 28%; }
+    .mainContainer .container .containerBoard .row {
+      height: 190px; } }
