--- a/src/Components/Clock.scss
+++ b/src/Components/Clock.scss
@@ -2,7 +2,6 @@
   from {
     -webkit-mask-position: 150%;
   }
-
   to {
     -webkit-mask-position: -50%;
   }
@@ -21,20 +20,19 @@
     justify-content: space-between;
     margin-bottom: 1rem;
     .reset {
-      width: 54%;
+      width: 30%;
       text-align: center;
       letter-spacing: 1px;
       color: #fff;
       padding: 4px 10px;
-      border-bottom: 2px solid #fff;
+      border: 2px solid #fff;
       background: none;
       outline: none;
       cursor: pointer;
-      &:hover {
-        -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, 0.5) 30%, #000 50%, rgba(0, 0, 0, 0.5) 70%);
-        -webkit-mask-size: 200%;
-        animation: shine 3s infinite;
-      }
+      border-radius: 20px;
+      -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, 0.5) 30%, #000 50%, rgba(0, 0, 0, 0.5) 70%);
+      -webkit-mask-size: 200%;
+      animation: shine 3s infinite;
     }
     .startTimer {
       width: 30%;
@@ -42,33 +40,123 @@
       letter-spacing: 1px;
       color: #fff;
       padding: 4px 10px;
-      border-bottom: 2px solid #fff;
       background: none;
       outline: none;
       cursor: pointer;
-      &:hover {
-        -webkit-mask-image: linear-gradient(-75deg, rgba(0, 0, 0, 0.5) 30%, #000 50%, rgba(0, 0, 0, 0.5) 70%);
-        -webkit-mask-size: 200%;
-        animation: shine 3s infinite;
+      border: 2px solid #fff;
+      border-radius: 20px;
+      -webkit-mask-image: linear-gradient(-75deg, rgba(255, 255, 255, 0.5) 30%, #fff 50%, rgba(255, 255, 255, 0.5) 70%);
+      -webkit-mask-size: 200%;
+      animation: shine 3s infinite;
+    }
+  }
+  .handleTimes{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    border-bottom: 2px dotted #fff;
+    line-height: 40px;
+    word-wrap: break-word;
+    .showCurrentUser{
+      width: 76%;
+      letter-spacing: 0;
+      text-align: right;
+    }
+  }
+  .showBestTimes{
+    margin: 10px 0;
+    display: flex;
+    cursor: pointer;
+    .showTimes{
+      display: block;
+      margin-right: 8px;
+    }
+    i{
+      margin-top: 3px;
+      &:hover{
+        color: #555;
       }
     }
   }
-  .timer{
-  span{
-    padding-left: 25px;
+  .handleBestTime{
+    display: flex;
+    flex-direction: column;
+    max-height: 250px;
+    overflow-y: hidden;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-timing-function: cubic-bezier(0.5, 1, 0.5, 1);
+    .bestTime{
+      display: flex;
+      justify-content: space-between;
+      border: 2px solid #fff;
+      padding: 8px;
+      .containerTimeIndex{
+        display: flex;
+        flex-direction: row;
+        .numberOfBestTime{
+          margin-right: 10px;
+          padding-right: 5px;
+          border-right: 2px solid #fff;
+        }
+      }
+      &:nth-of-type(1){
+        border-bottom: none;
+      }
+      &:nth-of-type(2){
+        border-bottom: none;
+      }
+      .userTime{
+        border-left: 2px solid #fff;
+        padding-left: 10px;
+      }
     }
   }
-  .timeGuessed{
-    margin: 10px 0;
-    span{
-      padding-left: 9px;
+  .closed{
+    max-height: 0;
+  }
+}
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+  .clock{
+    font-size: 140%;
+  }
+}
+@media only screen and (min-width: 767px) and (max-width: 1024px) {
+  .clock{
+    font-size: 140%;
+    display: flex;
+    flex-direction: column;
+    .holdingAllTime{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      .holdingTimes{
+        width: 44%;
+        .handleTimes{
+          line-height: 54px;
+        }
+      }
+      .holdingBestTimes{
+        width: 50%;
+      }
     }
   }
-  .currentUser{
-    width: 100%;
-    margin: 0 0 10px 0;
-    span{
-      padding-left: 25px;
+}
+@media only screen and (min-width: 1025px) {
+  .clock{
+    margin-top: 106px;
+    font-size: 140%;
+    display: flex;
+    flex-direction: column;
+    .holdingAllTime{
+      .holdingTimes{
+        .handleTimes{
+          line-height: 46px;
+        }
+      }
+      .holdingBestTimes{
+        margin-top: 40px;
+      }
     }
   }
 }
